--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".presentation.name.Track.TrackActivity"></activity>
+        <activity android:name="com.example.core.mvp.CoreMvpActivity"></activity>
+        <activity android:name=".presentation.name.Track.TrackActivity" />
         <activity android:name=".presentation.name.Artist.ArtistActivity" />
         <activity android:name=".presentation.name.TopArtists.TopArtistsActivity" />
         <activity android:name=".presentation.name.main.MainActivity">
