--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name="com.example.core.mvp.CoreMvpActivity"></activity>
-        <activity android:name=".presentation.name.Track.TrackActivity"/>
-        <activity android:name=".presentation.name.Artist.ArtistActivity" />
-        <activity android:name=".presentation.name.TopArtists.TopArtistsActivity" />
-        <activity android:name=".presentation.name.main.MainActivity">
+        <activity android:name=".presentation.track.TrackActivity"/>
+        <activity android:name=".presentation.artist.ArtistActivity" />
+        <activity android:name=".presentation.topArtists.TopArtistsActivity" />
+        <activity android:name=".presentation.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
