show artist tracks

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 
 android {
+    def STRING = "String"
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.lastfmapp"
@@ -10,8 +11,16 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "BASE_URL", "http://ws.audioscrobbler.com"
+        buildConfigField STRING, "API_KEY", "f4cd93850ae865628f18f6d2af27c3c4"
     }
     buildTypes {
+
+        debug {
+
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
